비트맵파일 열기 및 데이터로 BITMAP 만들기전 setting 완

--- a/ImageExample.vcxproj
+++ b/ImageExample.vcxproj
@@ -128,10 +128,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="D2DFramework.cpp" />
+    <ClCompile Include="ImageExample.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="D2DFramework.h" />
+    <ClInclude Include="ImageExample.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
