--- a/ImageExample.vcxproj.filters
+++ b/ImageExample.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="D2DFramework.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="ImageExample.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="D2DFramework.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ImageExample.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
